Update function list in index.html

--- a/index.html
+++ b/index.html
@@ -300,23 +300,7 @@
 
     <script>
         let functions = [
-            {
-                "name": "仪器/对照品效期查询",
-                "location": "./views/expir-info.html"
-            },
-            {
-                "name": "API检验操作规程",
-                "location": "./views/sop.html"
-            },
-            {
-                "name": "QC计算工具集",
-                "location": "./views/rsd.html"
-            },
-            {
-                "name": "各国药典/中检所对照品检索",
-                "location": "./views/statue.html"
-            }
-            {
+           {
                 "name": "干燥失重",
                 "location": "./views/lod.html"
             },
@@ -328,7 +312,22 @@
                 "name": "进样时间推算",
                 "location": "./views/injection-sequence.html"
             },
-           
+            {
+                "name": "仪器/对照品效期查询",
+                "location": "./views/expir-info.html"
+            },
+            {
+                "name": "检验操作规程",
+                "location": "./views/sop.html"
+            },
+            {
+                "name": "QC计算工具集",
+                "location": "./views/rsd.html"
+            },
+            {
+                "name": "各国药典/中检所对照品检索",
+                "location": "./views/statue.html"
+            }
         ];
 
         $(document).ready(function() {
