--- a/index.html
+++ b/index.html
@@ -297,15 +297,10 @@
             
             <h2 class="section-title">关于</h2>
             <div class="about">
-                <p>建议使用系统自带浏览器，以完善使用体验！</p>
+                <p>建议使用系统自带浏览器，以完善使用体验！为实验室质量控制提升效率，仅限内部使用，勿传播</p>
                 <p>© 2025 质量部分析室II 所有。</p>
             </div>
         </div>
-        
-        <div class="footer">
-            <p>为实验室质量控制提升效率，仅限内部使用，勿传播</p>
-        </div>
-    </div>
 
     <script>
         let functions = [
