--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             },
             {
                 "name": "GC/HPLC色谱柱查询（仅API）",
-                "location": "./views/gc/hplc.html"
+                "location": "./views/GCLC.html"
             {
                 "name": "QC计算工具集",
                 "location": "./views/rsd.html"
