--- a/index.html
+++ b/index.html
@@ -317,6 +317,10 @@
                 "location": "./views/column.html"
             },
             {
+                "name": "液相流动相计算器",
+                "location": "./views/HPLC mobile phase.html"
+            }, 
+            {
                 "name": "QC计算工具集",
                 "location": "./views/rsd.html"
             },
