--- a/index.html
+++ b/index.html
@@ -320,6 +320,10 @@
                 "name": "液相流动相计算器",
                 "location": "./views/HPLC mobile phase.html"
             }, 
+             {
+                "name": "溶液配制量计算器",
+                "location": "./views/solution.html"
+            }, 
             {
                 "name": "QC计算工具集",
                 "location": "./views/rsd.html"
