--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <script>
         let functions = [
             {
-                "name": "仪器/对照品效期查询",
+                "name": "仪器设备/对照品效期查询",
                 "location": "./views/expir-info.html"
             },
             {
